# Xutil

./: .eslintrc.js  .gitattributes  .gitignore  .prettierrc.js  autoImport.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  common.ts  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  log4rs.yaml  tauri.conf.json  time.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  invoke_api.rs  invoke_command.rs  logger.rs  main.rs
src-tauri/src/common/: constant.rs  entity.rs  mod.rs  util.rs
src-tauri/src/event/: mod.rs
src-tauri/src/invoke/: common.rs  custom_cmd.rs  mod.rs  scheduler.rs  translate.rs  util.rs
src-tauri/src/scheduler/: mod.rs
src/components/: Command.vue  HelloWorld.vue
src/layout/: BasicLayout.vue
src/pages/command/: Command.vue  index.ts
src/pages/command/addCommand/: AddCommand.vue  index.ts
src/pages/command/addGroup/: AddGroup.vue  index.ts
src/pages/home/: Index.vue
src/pages/notice/: Notice.vue  index.ts
src/pages/notice/addNotice/: AddNotice.vue  index.ts
src/pages/notice/show/: Show.vue  index.ts
src/pages/translate/: Translate.vue  index.ts
src/router/: index.ts  routes.ts
src/utils/: encrypt.ts
types/: auto-imports.d.ts  components.d.d.ts
